
All ports committers are allowed to commit to this file.

20130507:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle setting correct shebang to scripts

  By default it will fix bash, perl, php, ruby and python on all files specified
  in the SHEBANG_FILES macro (glob pattern relative to ${WRKSRC})

  Paths can be customized, and number of languages supported can be extended.

20130506:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle linking on ncurses and on readline

  USES= ncurses will set env and make the port link to base version of ncurses
  if no port version is installed otherwise it will link against port version
  USES= ncurses:port will for the port to link against the ports version of
  ncurses
  USES= ncurses:base will force to link against base version of ncurses.

  USES= readline will make the port link against base version of readline except
  on 10+ where it will force dependency on the port version of readline
  USES= readline:port will anyway force dependency on the port version of
  readline.

20130426:
AUTHOR: mva@FreeBSD.org

  * USE_ICONV has been deprecated and converted into the iconv USE
    feature

    USES= iconv

20130425:
AUTHOR: bapt@FreeBSD.org

  * USE_CDRTOOLS is no longer recognized
  * USE_FREETYPE is no longer recognized

20130423:
AUTHOR: jgh@FreeBSD.org

  * New USES macro to handle support for gettext dependency:

    USES= gettext:build will add gettext into BUILD_DEPENDS
    USES= gettext:run will add gettext into RUN_DEPENDS
    USES= gettext:lib will add gettext into LIB_DEPENDS

    It deprecates USE_GETTEXT which will be removed as soon as it is not
    used anymore

20130422:
AUTHOR: bdrewery@FreeBSD.org

  * The entry for 20120830 to change CCACHE_DIR was not fully supported
    by all ports. There is now a CCACHE_DIR variable that can be used
    in /etc/make.conf for more complete coverage:

    CCACHE_DIR=/var/cache/ccache

20130422:
AUTHOR: bapt@FreeBSD.org
